Add YangErrorsBody
YangErrorsBody is the canonical server-side representation of a set of
reported errors.

Shift serialization logic to this server.api construct, eliminating the
use of intermediate transformers in favor of a centralized indenting
constract.

JIRA: NETCONF-1188
Change-Id: If9f0b8c91a93726444e45b9c261aeb198cc9cc00
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>