@@ -8,21 +8,15 @@
 package org.opendaylight.restconf.nb.rfc8040.legacy;
 
 import static java.util.Objects.requireNonNull;
-import static org.opendaylight.yang.svc.v1.urn.ietf.params.xml.ns.yang.ietf.restconf.rev170126.YangModuleInfoImpl.qnameOf;
 
 import com.google.common.annotations.VisibleForTesting;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.io.OutputStreamWriter;
-import java.io.StringReader;
-import java.io.StringWriter;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
-import java.util.LinkedHashSet;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.stream.Collectors;
 import javax.ws.rs.core.Context;
 import javax.ws.rs.core.HttpHeaders;
@@ -30,23 +24,18 @@ import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.ext.ExceptionMapper;
 import javax.ws.rs.ext.Provider;
-import javax.xml.stream.XMLOutputFactory;
 import javax.xml.stream.XMLStreamException;
-import javax.xml.transform.OutputKeys;
-import javax.xml.transform.TransformerException;
-import javax.xml.transform.TransformerFactory;
-import javax.xml.transform.stream.StreamResult;
-import javax.xml.transform.stream.StreamSource;
-import org.opendaylight.restconf.api.HttpStatusCode;
+import org.opendaylight.restconf.api.ErrorMessage;
 import org.opendaylight.restconf.common.errors.RestconfDocumentedException;
 import org.opendaylight.restconf.nb.jaxrs.JaxRsMediaTypes;
 import org.opendaylight.restconf.nb.rfc8040.ErrorTagMapping;
 import org.opendaylight.restconf.server.api.DatabindContext;
+import org.opendaylight.restconf.server.api.ServerError;
+import org.opendaylight.restconf.server.api.ServerErrorInfo;
+import org.opendaylight.restconf.server.api.ServerErrorPath;
+import org.opendaylight.restconf.server.api.YangErrorsBody;
 import org.opendaylight.restconf.server.spi.DatabindProvider;
 import org.opendaylight.yang.gen.v1.urn.ietf.params.xml.ns.yang.ietf.restconf.rev170126.errors.Errors;
-import org.opendaylight.yang.gen.v1.urn.ietf.params.xml.ns.yang.ietf.restconf.rev170126.errors.errors.Error;
-import org.opendaylight.yangtools.yang.common.QName;
-import org.opendaylight.yangtools.yang.data.codec.gson.JsonWriterFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -64,19 +53,6 @@ import org.slf4j.LoggerFactory;
 public final class RestconfDocumentedExceptionMapper implements ExceptionMapper<RestconfDocumentedException> {
     private static final Logger LOG = LoggerFactory.getLogger(RestconfDocumentedExceptionMapper.class);
     private static final MediaType DEFAULT_MEDIA_TYPE = MediaType.APPLICATION_JSON_TYPE;
-    private static final QName ERROR_TYPE_QNAME = qnameOf("error-type");
-    private static final QName ERROR_TAG_QNAME = qnameOf("error-tag");
-    private static final QName ERROR_APP_TAG_QNAME = qnameOf("error-app-tag");
-    private static final QName ERROR_MESSAGE_QNAME = qnameOf("error-message");
-    private static final QName ERROR_INFO_QNAME = qnameOf("error-info");
-    private static final QName ERROR_PATH_QNAME = qnameOf("error-path");
-    private static final int DEFAULT_INDENT_SPACES_NUM = 2;
-    private static final XMLOutputFactory XML_OUTPUT_FACTORY;
-
-    static {
-        XML_OUTPUT_FACTORY = XMLOutputFactory.newFactory();
-        XML_OUTPUT_FACTORY.setProperty(XMLOutputFactory.IS_REPAIRING_NAMESPACES, true);
-    }
 
     private final DatabindProvider databindProvider;
     private final ErrorTagMapping errorTagMapping;
@@ -99,185 +75,68 @@ public final class RestconfDocumentedExceptionMapper implements ExceptionMapper<
     @SuppressFBWarnings(value = "SLF4J_MANUALLY_PROVIDED_MESSAGE", justification = "In the debug messages "
             + "we don't to have full stack trace - getMessage(..) method provides finer output.")
     public Response toResponse(final RestconfDocumentedException exception) {
-        LOG.debug("Starting to map received exception to error response: {}", exception.getMessage());
-        final var responseStatus = getResponseStatusCode(exception);
+        final var msg = exception.getMessage();
+        LOG.debug("Starting to map received exception to error response: {}", msg);
 
-        final String serializedResponseBody;
-        final MediaType responseMediaType = transformToResponseMediaType(getSupportedMediaType());
-        if (JaxRsMediaTypes.APPLICATION_YANG_DATA_JSON.equals(responseMediaType)) {
-            serializedResponseBody = serializeExceptionToJson(exception, databindProvider);
-        } else {
-            serializedResponseBody = serializeExceptionToXml(exception, databindProvider);
-        }
-
-        final Response preparedResponse = Response.status(responseStatus.code(), responseStatus.phrase())
-                .type(responseMediaType)
-                .entity(serializedResponseBody)
-                .build();
-        LOG.debug("Exception {} has been successfully mapped to response: {}",
-                exception.getMessage(), preparedResponse);
-        return preparedResponse;
-    }
-
-    /**
-     * Serialization exceptions into JSON representation.
-     *
-     * @param exception To be serialized exception.
-     * @param databindProvider Holder of current {@code DatabindContext}.
-     * @return JSON representation of the exception.
-     */
-    private static String serializeExceptionToJson(final RestconfDocumentedException exception,
-            final DatabindProvider databindProvider) {
-        try (var outputStream = new ByteArrayOutputStream();
-             var streamWriter = new OutputStreamWriter(outputStream, StandardCharsets.UTF_8);
-             var jsonWriter = JsonWriterFactory.createJsonWriter(streamWriter, DEFAULT_INDENT_SPACES_NUM)) {
-            final var currentDatabindContext = exception.modelContext() != null
-                ? DatabindContext.ofModel(exception.modelContext()) : databindProvider.currentDatabind();
-            jsonWriter.beginObject();
-            final var errors = exception.getErrors();
-            if (errors != null && !errors.isEmpty()) {
-                jsonWriter.name(Errors.QNAME.getLocalName()).beginObject();
-                jsonWriter.name(Error.QNAME.getLocalName()).beginArray();
-                for (final var error : errors) {
-                    jsonWriter.beginObject()
-                        .name(ERROR_TAG_QNAME.getLocalName()).value(error.getErrorTag().elementBody());
-                    final var errorAppTag = error.getErrorAppTag();
-                    if (errorAppTag != null) {
-                        jsonWriter.name(ERROR_APP_TAG_QNAME.getLocalName()).value(errorAppTag);
-                    }
-                    final var errorInfo = error.getErrorInfo();
-                    if (errorInfo != null) {
-                        jsonWriter.name(ERROR_INFO_QNAME.getLocalName()).value(errorInfo);
-                    }
-                    final var errorMessage = error.getErrorMessage();
-                    if (errorMessage != null) {
-                        jsonWriter.name(ERROR_MESSAGE_QNAME.getLocalName()).value(errorMessage);
-                    }
-                    final var errorPath = error.getErrorPath();
-                    if (errorPath != null) {
-                        jsonWriter.name(ERROR_PATH_QNAME.getLocalName());
-                        currentDatabindContext.jsonCodecs().instanceIdentifierCodec()
-                            .writeValue(jsonWriter, errorPath);
-                    }
-                    jsonWriter.name(ERROR_TYPE_QNAME.getLocalName()).value(error.getErrorType().elementBody());
-                    jsonWriter.endObject();
+        // Convert RestconfError to ServerError
+        final var legacyErrors = exception.getErrors();
+        final var builder = new ArrayList<ServerError>(legacyErrors.size());
+        DatabindContext databind = null;
+        for (var legacy : legacyErrors) {
+            final ServerErrorPath path;
+            final var legacyPath = legacy.getErrorPath();
+            if (legacyPath != null) {
+                if (databind == null) {
+                    final var modelContext = exception.modelContext();
+                    databind = modelContext != null ? DatabindContext.ofModel(modelContext)
+                        : databindProvider.currentDatabind();
                 }
-                jsonWriter.endArray().endObject();
+                path = new ServerErrorPath(databind, legacyPath);
+            } else {
+                path = null;
             }
-            jsonWriter.endObject();
-            streamWriter.flush();
-            return outputStream.toString(StandardCharsets.UTF_8);
-        } catch (IOException e) {
-            throw new IllegalStateException("Error while serializing restconf exception into JSON", e);
-        }
-    }
 
-    /**
-     * Serialization exceptions into XML representation.
-     *
-     * @param exception To be serialized exception.
-     * @param databindProvider Holder of current {@code DatabindContext}.
-     * @return XML representation of the exception.
-     */
-    private static String serializeExceptionToXml(final RestconfDocumentedException exception,
-            final DatabindProvider databindProvider) {
-        try (var outputStream = new ByteArrayOutputStream()) {
-            final var xmlWriter = XML_OUTPUT_FACTORY.createXMLStreamWriter(outputStream,
-                StandardCharsets.UTF_8.name());
-            final var currentDatabindContext = exception.modelContext() != null
-                ? DatabindContext.ofModel(exception.modelContext()) : databindProvider.currentDatabind();
-            xmlWriter.writeStartDocument();
-            xmlWriter.writeStartElement(Errors.QNAME.getLocalName());
-            xmlWriter.writeDefaultNamespace(Errors.QNAME.getNamespace().toString());
-            if (exception.getErrors() != null && !exception.getErrors().isEmpty()) {
-                for (final var error : exception.getErrors()) {
-                    xmlWriter.writeStartElement(Error.QNAME.getLocalName());
-                    // Write error-type element
-                    xmlWriter.writeStartElement(ERROR_TYPE_QNAME.getLocalName());
-                    xmlWriter.writeCharacters(error.getErrorType().elementBody());
-                    xmlWriter.writeEndElement();
-
-                    if (error.getErrorPath() != null) {
-                        xmlWriter.writeStartElement(ERROR_PATH_QNAME.getLocalName());
-                        currentDatabindContext.xmlCodecs().instanceIdentifierCodec()
-                            .writeValue(xmlWriter, error.getErrorPath());
-                        xmlWriter.writeEndElement();
-                    }
-                    if (error.getErrorMessage() != null) {
-                        xmlWriter.writeStartElement(ERROR_MESSAGE_QNAME.getLocalName());
-                        xmlWriter.writeCharacters(error.getErrorMessage());
-                        xmlWriter.writeEndElement();
-                    }
-
-                    // Write error-tag element
-                    xmlWriter.writeStartElement(ERROR_TAG_QNAME.getLocalName());
-                    xmlWriter.writeCharacters(error.getErrorTag().elementBody());
-                    xmlWriter.writeEndElement();
-
-                    if (error.getErrorAppTag() != null) {
-                        xmlWriter.writeStartElement(ERROR_APP_TAG_QNAME.getLocalName());
-                        xmlWriter.writeCharacters(error.getErrorAppTag());
-                        xmlWriter.writeEndElement();
-                    }
-                    if (error.getErrorInfo() != null) {
-                        xmlWriter.writeStartElement(ERROR_INFO_QNAME.getLocalName());
-                        xmlWriter.writeCharacters(error.getErrorInfo());
-                        xmlWriter.writeEndElement();
-                    }
-                    xmlWriter.writeEndElement();
-                }
-            }
-            xmlWriter.writeEndElement();
-            xmlWriter.writeEndDocument();
-            xmlWriter.close();
-
-            final var transformerFactory = TransformerFactory.newInstance();
-            final var transformer = transformerFactory.newTransformer();
-            transformer.setOutputProperty(OutputKeys.INDENT, "yes");
-            // 2 spaces for indentation
-            transformer.setOutputProperty("{http://xml.apache.org/xslt}indent-amount",
-                String.valueOf(DEFAULT_INDENT_SPACES_NUM));
-            transformer.setOutputProperty(OutputKeys.OMIT_XML_DECLARATION, "yes");
-            final var xmlSource = new StreamSource(new StringReader(outputStream.toString(StandardCharsets.UTF_8)));
-            final var stringWriter = new StringWriter();
-            final var streamResult = new StreamResult(stringWriter);
-            transformer.transform(xmlSource, streamResult);
-            return stringWriter.toString();
-        } catch (IOException | XMLStreamException | TransformerException e) {
-            throw new IllegalStateException("Error while serializing restconf exception into XML", e);
-        }
-    }
-
-    /**
-     * Deriving of the status code from the thrown exception. At the first step, status code is tried to be read using
-     * {@link RestconfDocumentedException#getStatus()}. If it is {@code null}, status code will be derived from status
-     * codes appended to error entries (the first that will be found). If there are not any error entries,
-     * {@link HttpStatusCode#INTERNAL_SERVER_ERROR} will be used.
-     *
-     * @param exception Thrown exception.
-     * @return Derived status code.
-     */
-    private HttpStatusCode getResponseStatusCode(final RestconfDocumentedException exception) {
-        final var errors = exception.getErrors();
-        if (errors.isEmpty()) {
-            // if the module, that thrown exception, doesn't specify status code, it is treated as internal
-            // server error
-            return HttpStatusCode.INTERNAL_SERVER_ERROR;
+            final var legacyMessage = legacy.getErrorMessage();
+            final var legacyInfo = legacy.getErrorInfo();
+            builder.add(new ServerError(legacy.getErrorType(), legacy.getErrorTag(),
+                legacyMessage != null ? new ErrorMessage(legacyMessage) : null,
+                legacy.getErrorAppTag(),
+                path,
+                legacyInfo != null ? new ServerErrorInfo(legacyInfo) : null));
         }
 
-        final var allStatusCodesOfErrorEntries = errors.stream()
-                .map(restconfError -> errorTagMapping.statusOf(restconfError.getErrorTag()))
-                // we would like to preserve iteration order in collected entries - hence usage of LinkedHashSet
-                .collect(Collectors.toCollection(LinkedHashSet::new));
-        // choosing of the first status code from appended errors, if there are different status codes in error
-        // entries, we should create WARN message
-        if (allStatusCodesOfErrorEntries.size() > 1) {
+        final var body = new YangErrorsBody(builder);
+        final var errors = body.errors();
+        final var statusCodes = errors.stream()
+            .map(restconfError -> errorTagMapping.statusOf(restconfError.tag()))
+            .distinct()
+            .toList();
+        if (statusCodes.size() > 1) {
             LOG.warn("""
-                An unexpected error occurred during translation of exception {} to response: Different status codes
-                have been found in appended error entries: {}. The first error entry status code is chosen for
-                response.""", exception, allStatusCodesOfErrorEntries);
+                An unexpected error occurred during translation to response: Different status codes have been found in
+                appended error entries: {}. The first error entry status code is chosen for response.""",
+                statusCodes, new Throwable());
         }
-        return allStatusCodesOfErrorEntries.iterator().next();
+        final var responseStatus = statusCodes.get(0);
+
+        final var responseMediaType = transformToResponseMediaType(getSupportedMediaType());
+        final var baos = new ByteArrayOutputStream();
+        try {
+            if (JaxRsMediaTypes.APPLICATION_YANG_DATA_JSON.equals(responseMediaType)) {
+                body.formatToJSON(baos);
+            } else {
+                body.formatToXML(baos);
+            }
+        } catch (IOException | XMLStreamException e) {
+            throw new IllegalStateException("Error while serializing yang-errors body", e);
+        }
+
+        final var response = Response.status(responseStatus.code(), responseStatus.phrase())
+            .type(responseMediaType)
+            .entity(baos.toString(StandardCharsets.UTF_8))
+            .build();
+        LOG.debug("Exception {} has been successfully mapped to response: {}", exception, response);
+        return response;
     }
 
     /**
@@ -290,41 +149,41 @@ public final class RestconfDocumentedExceptionMapper implements ExceptionMapper<
      * @return Media type.
      */
     private MediaType getSupportedMediaType() {
-        final Set<MediaType> acceptableAndSupportedMediaTypes = headers.getAcceptableMediaTypes().stream()
-                .filter(RestconfDocumentedExceptionMapper::isCompatibleMediaType)
-                .collect(Collectors.toSet());
+        final var acceptableAndSupportedMediaTypes = headers.getAcceptableMediaTypes().stream()
+            .filter(RestconfDocumentedExceptionMapper::isCompatibleMediaType)
+            .collect(Collectors.toSet());
         if (acceptableAndSupportedMediaTypes.isEmpty()) {
             // check content type of the request
             final MediaType requestMediaType = headers.getMediaType();
-            return requestMediaType == null ? DEFAULT_MEDIA_TYPE
-                    : chooseMediaType(Collections.singletonList(requestMediaType)).orElseGet(() -> {
-                        LOG.warn("Request doesn't specify accepted media-types and the media-type '{}' used by "
-                                + "request is not supported - using of default '{}' media-type.",
-                                requestMediaType, DEFAULT_MEDIA_TYPE);
-                        return DEFAULT_MEDIA_TYPE;
-                    });
+            return requestMediaType == null ? DEFAULT_MEDIA_TYPE : chooseMediaType(List.of(requestMediaType))
+                .orElseGet(() -> {
+                    LOG.warn("""
+                        Request doesn't specify accepted media-types and the media-type '{}' used by request is not
+                        supported - using of default '{}' media-type.""", requestMediaType, DEFAULT_MEDIA_TYPE);
+                    return DEFAULT_MEDIA_TYPE;
+                });
         }
 
         // at first step, fully specified types without any wildcards are considered (for example, application/json)
-        final List<MediaType> fullySpecifiedMediaTypes = acceptableAndSupportedMediaTypes.stream()
-                .filter(mediaType -> !mediaType.isWildcardType() && !mediaType.isWildcardSubtype())
-                .collect(Collectors.toList());
+        final var fullySpecifiedMediaTypes = acceptableAndSupportedMediaTypes.stream()
+            .filter(mediaType -> !mediaType.isWildcardType() && !mediaType.isWildcardSubtype())
+            .collect(Collectors.toList());
         if (!fullySpecifiedMediaTypes.isEmpty()) {
             return chooseAndCheckMediaType(fullySpecifiedMediaTypes);
         }
 
         // at the second step, only types with specified subtype are considered (for example, */json)
-        final List<MediaType> mediaTypesWithSpecifiedSubtypes = acceptableAndSupportedMediaTypes.stream()
-                .filter(mediaType -> !mediaType.isWildcardSubtype())
-                .collect(Collectors.toList());
+        final var mediaTypesWithSpecifiedSubtypes = acceptableAndSupportedMediaTypes.stream()
+            .filter(mediaType -> !mediaType.isWildcardSubtype())
+            .collect(Collectors.toList());
         if (!mediaTypesWithSpecifiedSubtypes.isEmpty()) {
             return chooseAndCheckMediaType(mediaTypesWithSpecifiedSubtypes);
         }
 
         // at the third step, only types with specified parent are considered (for example, application/*)
-        final List<MediaType> mediaTypesWithSpecifiedParent = acceptableAndSupportedMediaTypes.stream()
-                .filter(mediaType -> !mediaType.isWildcardType())
-                .collect(Collectors.toList());
+        final var mediaTypesWithSpecifiedParent = acceptableAndSupportedMediaTypes.stream()
+            .filter(mediaType -> !mediaType.isWildcardType())
+            .collect(Collectors.toList());
         if (!mediaTypesWithSpecifiedParent.isEmpty()) {
             return chooseAndCheckMediaType(mediaTypesWithSpecifiedParent);
         }
